# mrgit

./: .gitignore  Pipfile  README.md  mrgit.sh  pyproject.toml  requirements.txt  test.py  your_program.sh
.codecrafters/: compile.sh  run.sh
app/: branch.py  cat_file.py  checkout.py  commit.py  commit_tree.py  config.py  constants.py  git_init.py  hash_object.py  log.py  ls_tree.py  main.py  update_ref.py  utils.py  write_tree.py
app/checkout_utils/: update_files.py
app/objects/: __init__.py  base.py  blob.py  commit.py  tree.py  utils.py
app/refs/: __init__.py  ref.py
